_sass/_base.scss
@import 'vars';

html,
body {
    font-family: 'Open Sans', sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Open Sans', sans-serif !important;
}

.external-link {
    text-decoration: underline;
}


.page-header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: fixed;
    z-index: $header-z-index;
    top: 0;

    height: $header-height;
    width: 100%;
    padding: 0 $header-padding;

    background: $header-bg-color;

    a { 
        &.page-title,
        &.nav-link {
            height: 100%;
            line-height: $header-height;

            background-color: transparent;
            transition: background-color $standard-transition;
            will-change: background-color;
            &:hover {
                background-color: rgba(0,0,0,0.2);
            } 
        }
        &.page-title {
            position: relative;
            width: $sidebar-width;
            text-align: center;
            margin-left: -$header-padding;
            font-size: 2rem;
            text-transform: uppercase;
            color: white;
            display: flex;
            align-items: center;
            justify-content: center;
            height: $header-height;
            margin-right: 15px;
            img:first-child {
                margin-right: 10px;
            }
        }
        &.version-link {
            color: #999;
            background-color: rgba(0,0,0,0.15);
            display: block;

            &.active {
                color: white;
                background-color: rgba(0,0,0,0.2);
            }
        }
    }
}

.nav-link {
    padding: 0 15px;
    letter-spacing: -0.01em;
    height: 100%;
    line-height: $header-height; 
    font-weight: 100;
    position: relative;

    color: #eaeaea;
    transition: background-color $standard-transition;
    will-change: background-color;
    &:hover {
        color: white;
        transition: color $standard-transition;
        background-color: rgba(0,0,0,0.2);
    }

    .arrow {
        position: absolute;
        top: 46%;
        transform: translateY(-50%);
        right: 5px;
    }

    .badge {
        margin-left: 7px;
        position: relative;
        top: -1px; //nudge into vertical alignment
        background-color: rgba(255, 255, 255, 0.15);
    }

    .dropdown {
        visibility: hidden;
        opacity: 0;
        position: absolute;
        transition: all 0.5s ease;
        margin: 0;
        top: calc(100% - 1px);
        left: 0;
        display: none;
        color: #333;
        list-style-type: none;
        background-color: white;
        box-shadow: 1px 1px 3px rgba(0,0,0,0.25);

        li {
            color: inherit;
        }
        .nav-link {
            background-color: transparent;
            color: black;
            &.active {
                background-color: #0084b4;
                color: #eaeaea;
            }
        }
    }

    &:hover > .dropdown,
    & > .dropdown:hover {
        visibility: visible;
        opacity: 1;
        display: block;
    }
}

.version-link {
    .badge {
        background-color: rgba(0,0,0,0.2);
    }
}

.page-nav {
    display: flex;
}

.page-content {
    position: relative;
    top: $header-height;
    width: 100%;
    z-index: $base-z-index;
    overflow: hidden;
}

.page-content-padding {
    padding: 2.15rem 2.25rem;
}

@media screen and (max-width: 39.9375em) {
    .hidden-sm {
        display: none;
    }
    .page-header a.page-title {
        font-size: 1rem;
        width: auto;
        margin-left: 0;
    }
}

.arrow {
    border: solid #eaeaea;
    border-width: 0 1px 1px 0;
    display: inline-block;
    padding: 2px;
    &.down {
        transform: rotate(45deg);
        -webkit-transform: rotate(45deg);
    }
}



.badge {
    color: inherit;
    font-size: 10px;
    letter-spacing: 0.01em;
    padding: 1px 4px;
    text-transform: uppercase;
    background: rgba(0,0,0,0.15);
    border-radius: 3px;
}

a code {
    color: $blue;
}

blockquote {
    margin-bottom: 1rem;
    padding: 10px 20px;
    background-color: #FFF8DE;
    border: 0;
    strong {
        color: #75735B;
    }
}

